# lpc-interpreter

./: .gitignore  CMakeLists.txt  readme.md  todo_list.txt
.cache/clangd/index/: ast.cpp.A3DC86D428682C48.idx  ast.h.592296B1DB418869.idx  codegen.cpp.6F04ED892974A331.idx  codegen.h.5DAA117A9EE1E90A.idx  main.cpp.531D0FC1273FCF14.idx  main.cpp.9845531152F33D0C.idx  parser.cpp.6CEC768567BAF18D.idx  parser.h.E7214A3706368FEF.idx  scanner.cpp.26CA14035D129D78.idx  scanner.h.D6E5934EC7DFA40D.idx  token.h.D881272260E78EC1.idx  type_decl.h.2FB556848B853253.idx  visitor.cpp.A3070D3D392BD430.idx  visitor.h.DB5EE850259570DC.idx
compiler/: CMakeLists.txt  grammer.txt  main.cpp
compiler/include/: ast.h  codegen.h  opcode.h  parser.h  preprocessor.h  scanner.h  token.h  type_decl.h  visitor.h
compiler/src/: ast.cpp  code.txt  codegen.cpp  parser.cpp  scanner.cpp  visitor.cpp
vm/: CMakeLists.txt  main.cpp  readme.txt
vm/include/: debug.h  lpc.h  lpc_value.h  opcode.h  os.h
vm/include/efun/: efun.h
vm/include/gc/: gc.h  mark_sweep.h
vm/include/memory/: memory.h
vm/include/os/: os.h
vm/include/runtime/: call_info.h  interpreter.h  stack.h  vm.h
vm/include/type/: lpc_array.h  lpc_buffer.h  lpc_closure.h  lpc_function.h  lpc_mapping.h  lpc_object.h  lpc_proto.h  lpc_string.h
vm/include/util/: hash.h
vm/src/: os.cpp
vm/src/debug/: debug.cpp
vm/src/efun/: debug_message.cpp  efun.cpp
vm/src/gc/: gc.cpp  mark_sweep.cpp
vm/src/memory/: memory.cpp
vm/src/os/: os.cpp  os_linux.cpp  os_windows.cpp
vm/src/runtime/: interpreter.cpp  stack.cpp  vm.cpp
(+9 files in other folders)
